--- a/built/styles.css
+++ b/built/styles.css
@@ -1,3 +1,15 @@
+* {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.button {
+    margin: 5px;
+    padding: 10px;
+    background-color: blue;
+    color: white;
+}
+
+/* the styles below are needed for the html table version but not the canvas version */
 table {
     border-spacing: 0px;
 }
@@ -18,11 +30,4 @@ table tr th {
 
 .liveCell {
     background-color: yellow;
-}
-
-.button {
-    margin: 5px;
-    padding: 10px;
-    background-color: blue;
-    color: white;
 }
